[gd_scene load_steps=3 format=3 uid="uid://m11u4vkta21t"]

[ext_resource type="Script" uid="uid://b8lqm03ch53nv" path="res://scripts/ui/death_scene.gd" id="1_0ktka"]
[ext_resource type="FontFile" uid="uid://dkl3bob77eb85" path="res://assets/ui/fonts/pixelpurl.medium.ttf" id="2_7picg"]

[node name="DETH_SCENE" type="CanvasLayer"]
script = ExtResource("1_0ktka")

[node name="timer_death" type="Timer" parent="."]

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="death_label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -128.5
offset_right = 319.0
offset_bottom = 128.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_7picg")
theme_override_font_sizes/font_size = 300
text = "DEATH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13

[node name="reiniciar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7picg")
theme_override_font_sizes/font_size = 50
text = "REINICIAR
"

[node name="menu_principal" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7picg")
theme_override_font_sizes/font_size = 50
text = "SALIR"

[connection signal="pressed" from="VBoxContainer/reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/menu_principal" to="." method="_on_menu_principal_pressed"]
